; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5416/extr_ar5416_power.c_ar5416SetPowerModeSleep.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5416/extr_ar5416_power.c_ar5416SetPowerModeSleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_STA_ID1 = common dso_local global i32 0, align 4
@AR_STA_ID1_PWR_SAV = common dso_local global i32 0, align 4
@AR_RTC_FORCE_WAKE = common dso_local global i32 0, align 4
@AR_RTC_FORCE_WAKE_EN = common dso_local global i32 0, align 4
@AR_RC = common dso_local global i32 0, align 4
@AR_RC_AHB = common dso_local global i32 0, align 4
@AR_RC_HOSTIF = common dso_local global i32 0, align 4
@AR_RTC_RESET = common dso_local global i32 0, align 4
@AR_RTC_RESET_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath_hal*, i32)* @ar5416SetPowerModeSleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar5416SetPowerModeSleep(%struct.ath_hal* %0, i32 %1) #0 {
  %3 = alloca %struct.ath_hal*, align 8
  %4 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %6 = load i32, i32* @AR_STA_ID1, align 4
  %7 = load i32, i32* @AR_STA_ID1_PWR_SAV, align 4
  %8 = call i32 @OS_REG_SET_BIT(%struct.ath_hal* %5, i32 %6, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %36

11:                                               ; preds = %2
  %12 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %13 = load i32, i32* @AR_RTC_FORCE_WAKE, align 4
  %14 = load i32, i32* @AR_RTC_FORCE_WAKE_EN, align 4
  %15 = call i32 @OS_REG_CLR_BIT(%struct.ath_hal* %12, i32 %13, i32 %14)
  %16 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %17 = call i32 @AR_SREV_HOWL(%struct.ath_hal* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %26, label %19

19:                                               ; preds = %11
  %20 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %21 = load i32, i32* @AR_RC, align 4
  %22 = load i32, i32* @AR_RC_AHB, align 4
  %23 = load i32, i32* @AR_RC_HOSTIF, align 4
  %24 = or i32 %22, %23
  %25 = call i32 @OS_REG_WRITE(%struct.ath_hal* %20, i32 %21, i32 %24)
  br label %26

26:                                               ; preds = %19, %11
  %27 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %28 = call i32 @AR_SREV_OWL(%struct.ath_hal* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %35, label %30

30:                                               ; preds = %26
  %31 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %32 = load i32, i32* @AR_RTC_RESET, align 4
  %33 = load i32, i32* @AR_RTC_RESET_EN, align 4
  %34 = call i32 @OS_REG_CLR_BIT(%struct.ath_hal* %31, i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %30, %26
  br label %36

36:                                               ; preds = %35, %2
  ret void
}

declare dso_local i32 @OS_REG_SET_BIT(%struct.ath_hal*, i32, i32) #1

declare dso_local i32 @OS_REG_CLR_BIT(%struct.ath_hal*, i32, i32) #1

declare dso_local i32 @AR_SREV_HOWL(%struct.ath_hal*) #1

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1

declare dso_local i32 @AR_SREV_OWL(%struct.ath_hal*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
